fixed horizontal scroll, delete social butons

--- a/css/styles.css
+++ b/css/styles.css
@@ -883,8 +883,8 @@ p {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+  /* margin-left: -15px; */
+  /* margin-right: -15px; */
 }
 
 .justify-content-center {
